stopped overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
 body {
   @apply bg-slate-100;
-  @apply overflow-hidden;
+  overflow: hidden;
 }
 ::-webkit-scrollbar {
   width: 0;
